--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     <style>
+     body {
+        background-color:rgb(68, 4, 4);}
+     h1 {
+        color: rgb(247, 210, 216);
+        text-align: center;
+     }
+     h2 {
+        color: rgb(248, 248, 248);
+        text-align: center;
+     }
+     p {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+        color: rgb(255, 216, 222);
+        text-align: center;
+     }
+     </style>
+</head>
+<body>
+   <h1>⋆｡‧˚ʚ🍒۶ৎ 𝔀ₑₗ𝓬ₒₘₑ ₜₒ ₜₕₑ 𝔀ₑ♭ ᵳₒᵣ ₐ ₜᵣᵢₐₗ ۶ৎ🍒ɞ˚‧｡⋆</h1> 
+</body>
+</html>
+<body>
+    <header>
+        <h1>This is a cute web with an every fairy</h1>
+    </header>
 
+    <div class="container">
+        <nav>
+            <h2>List Music</h2>
+            <ul>
+                <h2><li>Link 1</li></h2>
+                <h2><li>Link 2</li></h2>
+                <h2><li>Link 3</li></h2>
+            </ul>
+        </nav>
+
+        <main class="emojis">
+            <article>
+                <h2>Song: Sweet Scar</h2>
+                <p>▶︎ •၊၊||၊|။||||။‌‌‌‌‌၊|• 0:10</p>
+            </article>
+            <article>
+                <h2>Emoji 1</h2>
+                <p>˚˖𓍢🌷✧˚🎀⋆</p>
+            </article>
+            <article>
+                <h2>Emoji 3</h2>
+                <p>⋆｡‧˚ʚ🍒ɞ˚‧｡⋆</p>
+            </article>
+            <article>
+                <h2>Emoji 4</h2>
+                <p>🩰˚˖𓍢🦢✧˚🎀</p>
+            </article>
+            <article>
+                <h2>Emoji 5</h2>
+                <p>₊˚.🎧 ✩｡☕ 🤎</p>
+            </article>
+            <article>
+                <h2>Emoji 6</h2>
+                <p>✩♬₊˚.🎧⋆☾⋆⁺₊✧</p>
+            </article>
+            <article>
+                <h2>Emoji 7</h2>
+                <p>𓂃˖˳·˖ ִֶָ ⋆🌷͙⋆  ִֶָ˖·˳˖𓂃 ִֶָ</p>   
+        </main>
+    </div>
+
+    <footer>
+        <p>yeahh good bye..ִֶָ𓂃 ࣪˖ ִֶָ🐇་༘࿐</p>
+    </footer>
+</body>
